# diagrams-stow

./: .gitignore  README.md
mr/: .mrconfig  checkout-release-branches
nix/: cabal2nix.sh
nix/FontyFruity/: default.nix
nix/Rasterific/: default.nix
nix/SVGFonts/: default.nix  shell.nix
nix/active/: default.nix  shell.nix
nix/builder/: default.nix  shell.nix
nix/cairo/: default.nix  ghc76.nix  shell.nix
nix/canvas/: default.nix  shell.nix
nix/contrib/: default.nix  shell.nix
nix/core/: default.nix  shell.nix
nix/doc/: default.nix  shell.nix
nix/docutils/: default.nix  shell.nix
nix/dual-tree/: default.nix  shell.nix
nix/force-layout/: default.nix  shell.nix
nix/haddock/: default.nix  shell.nix
nix/lib/: default.nix  shell.nix
nix/monoid-extras/: default.nix  shell.nix
nix/nix-updates/parsec/: 3.1.6.nix
nix/nix-updates/text/: 1.2.0.0.nix
nix/palette/: default.nix  shell.nix
nix/pandoc/: default.nix  shell.nix
nix/pgf/: default.nix  shell.nix
nix/postscript/: default.nix  shell.nix
nix/povray/: default.nix  shell.nix
nix/rasterific/: default.nix  shell.nix
nix/statestack/: default.nix  shell.nix
nix/svg/: default.nix  shell.nix
nix/vector-space-points/: default.nix  shell.nix
packdeps/: packdeps.sh
release/: CabalPretty.hs  Checkout.hs  GitConfig.hs  UpperBounds.hs  default.nix  release.cabal  shell.nix
stack/builder/: stack.yaml
stack/core/: stack.yaml
stack/lib/: stack.yaml
stack/povray/: stack.yaml
stack/reflex/: stack.yaml
stack/svg/: stack.yaml
stack/test/: stack.yaml
