name:                release
version:             0.1
synopsis:            Automate point releases and other tasks for Diagrams, and other Haskell packages with similar conventions.
homepage:            http://github.com/bergey/diagrams-stow
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable checkout
  main-is:             Checkout.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings, ExtendedDefaultRules
  build-depends:       Cabal >= 1.18.1.3 && < 1.21,
                                    base >=4.7 && <4.8, 
                                    text >=1.1 && <1.3,
                                    shelly >= 1.5 && < 1.6,
                                    system-filepath >= 0.4 && < 0.5,
                                    optparse-applicative >= 0.9 && < 0.12
  -- hs-source-dirs:      
  default-language:    Haskell2010