name:                release
version:             0.1
synopsis:            Automate point releases and other tasks for Diagrams, and other Haskell packages with similar conventions.
homepage:            http://github.com/bergey/diagrams-stow
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable checkout
  main-is:             Checkout.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings, ExtendedDefaultRules
  build-depends:       Cabal >= 1.18.1.3 && < 1.23,
                       base >=4.7 && <4.9, 
                       text >=1.1 && <1.3,
                       shelly >= 1.5 && < 1.7,
                       system-filepath >= 0.4 && < 0.5
  -- hs-source-dirs:      
  default-language:    Haskell2010

-- executable cabal-pretty
--   main-is:             CabalPretty.hs
--   -- other-modules:       
--   other-extensions:    OverloadedStrings, ExtendedDefaultRules
--   build-depends:       Cabal >= 1.18.1.3 && < 1.23,
--                        base >=4.7 && <4.9, 
--                        text >=1.1 && <1.3,
--                        shelly >= 1.5 && < 1.7,
--                        system-filepath >= 0.4 && < 0.5,
--                        regex-pcre >= 0.94 && < 0.95,
--                        regex-base >= 0.93 && < 0.94
--   -- hs-source-dirs:      
--   default-language:    Haskell2010

executable upper-bounds
  main-is: UpperBounds.hs
  build-depends: 
                 base >=4.8 && <4.9
               , text >=1.1 && <1.3
               , shelly >= 1.5 && < 1.7
               , system-filepath >= 0.4 && < 0.5
               , semigroups >= 0.15 && < 0.17
               , system-filepath >= 0.4 && < 0.5
               , split >= 0.2 && < 0.3
               , Cabal >= 1.18.1.3 && < 1.23
  -- hs-source-dirs:      
  default-language:    Haskell2010